--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-util": "^3.0.7",
-    "gulp-watch": "^4.3.5",
+    "gulp-watch": "^4.3.8",
     "nodemon": "^1.9.2",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0"
   },
   "dependencies": {
     "body-parser": "^1.15.1",
+    "ejs": "^2.4.2",
     "express": "^4.13.4",
     "nesh": "^1.6.0",
     "socket.io": "^1.4.8"
