--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.8",
+    "js-beautify": "^1.6.3",
     "nodemon": "^1.9.2",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0"
